Bug 488884.  Blue Learn More link is really hard to read on the mac. r=gavin
UltraBlame original commit: 9b78b9dbdb0cceb3916d51aae8a5bb7b8543df57

--- a/toolkit/themes/pinstripe/global/notification.css
+++ b/toolkit/themes/pinstripe/global/notification.css
@@ -84,3 +84,11 @@ notification[type="critical"] .messageImage {
   -moz-border-radius: 100%;
   -moz-box-shadow: 0 0 3px 3px -moz-mac-focusring;
 }
+
+
+
+
+notification[type="info"] .text-link {
+  color: rgba(255,255,255,0.95)  !important;
+}
+
